# sanna

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  generate_golden.py  mcp-registry-entry.json  pyproject.toml  security-audit-sanna-repo-2026-03-26.md  v013-spec-audit.md
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
docs/: cloud-constitution-fetch.md  conventions.md  cookbook.md  deployment-tiers.md  drift-reports.md  gateway-config.md  key-management.md  otel-integration.md  production.md  python-sdk-reference.md  reasoning-receipts.md  receipt-format.md  receipt-queries.md  security-hardening.md  security-review-sprint4.md  state.md
examples/: CLAUDE_DESKTOP_SETUP.md  README.md  claude_desktop_config.json  customer_support_constitution.yaml  fleet_governance_demo.py  governance_lifecycle_demo.py  one_more_connector_demo.py
examples/constitutions/: claude-code-standard.yaml  cowork-personal.yaml  cowork-team.yaml  governance_connector.yaml  openclaw-developer.yaml  openclaw-personal.yaml  reasoning-example.yaml
examples/demo_receipts/: 01_query_database_allow.json  02_send_email_halt.json  03_pii_access_escalate.json  04_generate_report_audit.json
golden/: generate_golden.py  generate_goldens.py  generate_legacy_goldens.py
golden/receipts/: 001_fail_c1_refund.json  002_pass_simple_qa.json  003_pass_technical_hedged.json  004_pass_policy_conditional.json  005_warn_c2_unmarked_inference.json  006_warn_c3_false_certainty.json  007_warn_c5_compression.json  008_fail_c1_digital.json  008_fail_c1_factual.json  009_warn_c4_conflict.json  010_fail_multiple.json  011_pass_span_provenance.json  011_pass_with_extensions.json  012_pass_agent_model.json  012_pass_with_extensions.json  013_authority_allow.json  014_authority_halt_escalate.json  999_tampered.json  v10_pass_simple.json  v10_tampered.json  v13_001_fail_c1_refund.json  v13_002_pass_simple_qa.json  v13_003_pass_technical_hedged.json  v13_004_pass_policy_conditional.json  v13_005_warn_c2_unmarked.json  v13_006_warn_c3_certainty.json  v13_007_warn_c5_compression.json  v13_008_fail_c1_factual.json  v13_009_warn_c4_conflict.json  v5_pass_simple.json  v5_tampered.json  v6_pass_simple.json  v6_tampered.json  v7_pass_simple.json  v7_tampered.json  v8_pass_simple.json  v8_tampered.json
golden/receipts/archive/: README.md
golden/receipts/archive/pre-v1.3/: v13_001_fail_c1_refund.json  v13_006_warn_c3_certainty.json  v13_007_warn_c5_compression.json  v13_008_fail_c1_factual.json  v13_009_warn_c4_conflict.json
golden/receipts/archive/v1.3/: 001_fail_c1_refund.json  003_pass_technical_hedged.json  004_pass_policy_conditional.json  006_warn_c3_false_certainty.json  007_warn_c5_compression.json  008_fail_c1_digital.json  009_warn_c4_conflict.json  010_fail_multiple.json  (+2 more)
spec/: constitution.schema.json  receipt.schema.json  sanna-specification-v1.0.md
src/sanna/: __init__.py  aarm.py  anomaly.py  bundle.py  cli.py  constitution.py  crypto.py  drift.py  evaluators.py  fingerprint.py  hashing.py  init_constitution.py  manifest.py  middleware.py  receipt.py  redaction.py  sink.py  store.py  verify.py  verify_manifest.py
src/sanna/cloud/: __init__.py  _http.py  constitution.py
src/sanna/enforcement/: __init__.py  authority.py  constitution_engine.py  escalation.py
src/sanna/evaluators/: __init__.py  llm.py  regex_deny.py
src/sanna/exporters/: __init__.py  otel_exporter.py
src/sanna/gateway/: __init__.py  config.py  mcp_client.py  migrate.py  receipt_v2.py  schema_mutation.py  server.py
src/sanna/interceptors/: __init__.py  api_authority.py  cli_authority.py  http_interceptor.py  subprocess_interceptor.py
src/sanna/mcp/: README.md  __init__.py  __main__.py  server.py
src/sanna/reasoning/: __init__.py  evaluator.py  heuristic_judge.py  judge.py  judge_factory.py  llm_client.py  pipeline.py
src/sanna/sinks/: __init__.py  cloud.py  composite.py  local.py  null.py  sink.py
src/sanna/spec/: receipt.schema.json
src/sanna/templates/: __init__.py  claude_code_standard.yaml  cowork_personal.yaml  customer_facing.yaml  enterprise_it.yaml  financial_analyst.yaml  general_purpose.yaml  healthcare_triage.yaml  openclaw_developer.yaml
src/sanna/utils/: __init__.py  crypto_validation.py  safe_io.py  safe_json.py  safe_yaml.py  sanitize.py
tests/: STRESS_TEST_RESULTS.md  conftest.py  generate_vectors.py  test_allow_conformance.py  test_anomaly_redaction.py  test_api_surface_trim.py  test_approval.py  test_approval_v2.py  test_authority.py  test_authority_fixtures.py  test_authority_receipts.py  test_block5_concurrency_quality.py  test_block_g_devex.py  test_bundle.py  test_bundle_approval.py  test_bundle_trust_anchor_vectors.py  test_cli_anomaly.py  test_cli_dx.py  test_cloud_constitution.py  test_constitution.py  test_constitution_lifecycle.py  test_constitution_v11.py  test_constitution_validation.py  test_crit01_approval_channel.py  test_crit02_constitution_sig.py  test_crit03_redaction.py  test_cross_language_fixture_parity.py  test_cross_sdk_gateway_redaction_vectors.py  test_crypto_integrity.py  test_drift.py  test_drift_timestamps.py  test_duplicate_tools.py  test_ed25519_rfc8032.py  test_enforcement.py  test_error_labels.py  test_escalate_conformance.py  test_escalation_store_v2.py  test_evaluators.py  test_evaluators_llm.py  test_export.py  (+92 more)
tests/constitutions/: all_halt.yaml  all_log.yaml  all_warn.yaml  api-anomaly-test.yaml  api-permissive.yaml  api-test.yaml  c1_c3_only.yaml  c1_halt_rest_log.yaml  c1_warn_only.yaml  cli-anomaly-test.yaml  cli-inspect-scripts.yaml  cli-permissive.yaml  cli-test.yaml  no_invariants.yaml  with_authority.yaml  with_custom.yaml  with_trusted_sources.yaml
tests/reasoning/: test_deterministic_checks.py  test_evaluation_pipeline.py  test_judge.py  test_judge_factory.py  test_llm_coherence.py  test_prompt_security.py
tests/vectors/: README.md  canonicalization.json  constitution_signature.json  ed25519_rfc8032.json  receipt_signature.json
tools/: generate_state_doc.py
(+8 files in other folders)
