[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanna"
version = "0.13.5"
description = "Trust infrastructure for AI agents — constitution enforcement, cryptographic receipts, MCP governance gateway"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [{name = "nicallen-exd"}]
keywords = ["ai", "governance", "trust", "constitution", "receipts", "verification", "mcp", "agents", "cryptographic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "jsonschema>=4.17",
    "pyyaml>=6.0",
    "cryptography>=41.0",
    "filelock>=3.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0"]
dev = ["pytest>=7.0", "jsonschema>=4.17", "pyyaml>=6.0"]

[project.scripts]
sanna-generate = "sanna.cli:main_generate"
sanna-verify = "sanna.cli:main_verify"
sanna-sign-constitution = "sanna.cli:main_sign_constitution"
sanna-keygen = "sanna.cli:main_keygen"
sanna-verify-constitution = "sanna.cli:main_verify_constitution"
sanna-mcp = "sanna.mcp.__main__:main"
sanna-create-bundle = "sanna.cli:main_create_bundle"
sanna-verify-bundle = "sanna.cli:main_verify_bundle"
sanna-drift-report = "sanna.cli:main_drift_report"
sanna-approve-constitution = "sanna.cli:approve_constitution_cmd"
sanna-diff = "sanna.cli:diff_cmd"
sanna-init = "sanna.init_constitution:main"
sanna-gateway = "sanna.gateway:main"
sanna-demo = "sanna.cli:main_demo"
sanna-inspect = "sanna.cli:main_inspect"
sanna-check-config = "sanna.cli:main_check_config"
sanna = "sanna.cli:main_sanna"

[project.urls]
Homepage = "https://sanna.dev"
Documentation = "https://sanna.dev/docs"
Repository = "https://github.com/sanna-ai/sanna"
Issues = "https://github.com/sanna-ai/sanna/issues"
Changelog = "https://github.com/sanna-ai/sanna/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sanna = ["spec/*.json", "templates/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
